# myon

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SETUP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: README.md  burning_ship.py  colorful_noise.py  organic_flow.py  perlin_noise_field.py  simple_gradient.py
src/myon/: __init__.py  canvas.py  color.py  noise.py  utils.py
tests/: __init__.py  test_canvas.py  test_color.py  test_noise.py  test_utils.py
